First try at perspective distortion correction

--- a/SimpleCmsBlazor/Pages/ImageEdit.razor.scss
+++ b/SimpleCmsBlazor/Pages/ImageEdit.razor.scss
@@ -1,5 +1,5 @@
 ﻿.marker {
-    border: 1px solid black;
+    border: 5px solid #00000055;
     width: 3px;
     height: 3px;
     background: #ffffff55;
